--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 </head>
 <style>
 .tercher{
-	color:<?php for($i=0;$i<100;$i++) echo(i);?> ;
+	color:<?php for($i=0;$i<100;$i++) echo($i);?> ;
 	font-size:30px;
 	font-family:宋体;
 }
-
+.color{
+	color:red;
+}
 </style>
 <body bgcolor="#cccccc">
 <ul center>
