--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 	font-size:30px;
 	font-family:宋体;
 }
-.color{
-	color:blue;
+.green{
+	color:green;
 }
 </style>
 <body bgcolor="#cccccc">
 <ul center>
 <p class="tercher">花儿,为您献上芬芳</p>
-<p color=green>小草，为您散发清新</p>
+<p class="green">小草，为您散发清新</p>
 <p>小河，为你流淌快乐</p>
 <p>阳关,为你挥洒幸福</p>
 <p style="color:blue">9.10教师节，发送最最衷心的祝福，祝愿老师您身体健康，永远年轻！开心快乐，幸福永远！</p>
