--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <style>
 .tercher{
-	color:<?php for($i=0;$i<100;$i++) echo($i);?> red;
+	color:red;
 	font-size:30px;
 	font-family:宋体;
 }
